[package]
name = "zoom-cli"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Omoto <yukeomoto@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zoom"
path = "src/main.rs"

[dependencies]
clap = "4.0.8"
dirs = "4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.6"
